<resources>
    <string name="app_name">Auth Application</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="logout">LogOut</string>
</resources>